--- a/portfolio_home.html
+++ b/portfolio_home.html
@@ -40,24 +40,29 @@
         <img src="images/990A4052.jpg" width="200px">
         <div class="about">
             <h2>The Boss</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptate dolores 
-                dolorum delectus, minima reprehenderit est sed. Ab repellendus aliquam numquam, 
-                molestias sint cupiditate doloribus voluptas perspiciatis, distinctio aut fugiat 
-                eveniet minima eaque repudiandae similique dolores. Maxime veniam at tempore? 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium enim consectetur
-                 ducimus esse nesciunt rem dicta laudantium tenetur vel minima atque reiciendis, dolorum
-                 nulla ratione nisi qui voluptate nobis magnam error. Veritatis a obcaecati est delectus.
-                  Natus molestias cupiditate, at fugiat fuga ipsum ducimus! </p>
+            <p>[Olugbode Rohi] is a versatile and creative professional with expertise in programming, 
+                photography, and graphic design. With a passion for both technology and the arts, 
+                [Olugbode Rohi] seamlessly blends technical know-how with creative vision to produce unique, high-quality work 
+                As a programmer, [Olugbode Rohi] is skilled in various web development technologies, 
+                including HTML, CSS, JavaScript, and backend frameworks like Node.js and Python. 
+                [Olugbode Rohi] excels in creating dynamic, user-friendly websites and web applications, 
+                always focusing on clean code and optimized performance.
+                As a photographer, [Olugbode Rohi] has a keen eye for capturing moments with 
+                precision and artistry, using both natural and artificial lighting to produce stunning visuals. 
+                Whether it’s portrait, event, or product photography, [Olugbode Rohi] brings a professional touch 
+                that tells a compelling story through each shot. In the realm of graphic design, [Olugbode Rohi] has a strong command of design 
+                software like Adobe Photoshop, Illustrator, and InDesign, creating visually striking 
+                layouts, logos, and branding materials. With a solid understanding of design principles and trends, [Olugbode Rohi] crafts designs that resonate with clients and audiences alike. </p>
                   <div class="divider"></div>
-                  <p> Omnis minima blanditiis nemo,
-                   eos itaque laudantium eveniet dignissimos excepturi, aliquam at deleniti, unde labore
-                    voluptas quisquam architecto. Deserunt, doloribus iure. Praesentium reprehenderit 
-                    aliquid repudiandae perferendis rem vero ipsa reiciendis debitis molestiae cum hic, 
-                    illo quam fugit repellat nisi earum ipsum, quaerat quidem? Unde quam minima nobis. 
-                    Tempore unde, nobis consequuntur id quidem sed ratione corporis modi distinctio neque 
-                    tempora quo, earum voluptatibus eligendi velit alias esse. Magnam iusto est vitae, 
-                    repudiandae rerum voluptatem velit quam quo quia minus aspernatur beatae consequuntur 
-                    placeat facere ducimus dicta animi.</p>
+                  <p>[Olugbode Rohi] is a multi-talented creator with a unique blend of skills
+                     in programming, photography, graphic design, and gaming. With a passion for
+                      both the technical and artistic sides of creativity, [Olugbode Rohi] brings a
+                       thoughtful approach to every project—whether it's building dynamic websites,
+                        capturing stunning images, designing eye-catching visuals, or diving into the 
+                        world of gaming. As a gamer, [Olugbode Rohi] has a deep understanding of game mechanics and
+                         design, which translates into a creative edge when it comes to problem-solving and digital
+                          design. Always pushing boundaries and staying ahead of trends, [Olugbode Rohi] is dedicated 
+                          to delivering high-quality, impactful work across all fields.</p>
                     
         </div>
     </div>
